# lehakshiv

./: README.md  pyproject.toml  requirements.txt  tox.ini
lehakshiv/: lbackend.py  pdf2txt.py  text2speak.py  textcleaner.py
