[build-system]
requires = ["setuptools>=42", "wheel", "cython ~= 0.29.0"]
build-backend = "setuptools.build_meta"
[project]
name = "lehakshiv"
authors = [{name = "Giuseppe Marco Randazzo", email= "gmrandazzo@gmail.com"}]
description = "Libscientific python foreign function interface"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPLv3"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []
dynamic = ["version"]
[tool.setuptools.packages.find]
where = ["."]
include = ["lehakshiv*"]
exclude = []
namespaces = false
[tool.setuptools.dynamic]
version = {attr = "lehakshiv.__version__"}
